# Compiler-2025

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  Makefile  README.md  SymbolTable.h  instruction.h  ir.cpp  main.cpp  test_SSA.sh  test_SSA_opt.sh  test_asm.sh  test_batch.sh  test_execution.sh  test_ir.sh  test_ir_simple.sh  test_opt.sh  test_results.txt  test_results_summary.csv  test_ssa.sh  test_ssa_if.s  test_ssa_key.sh  test_ssa_simple.s  段错误修复报告.md
Requirement/题目要求/: ARM.md
doc/: 2025编译系统设计赛答辩.pptx  test_results_summary.csv
doc/题目要求/: RISC-V.md
include/: AST.hpp  ast.h  astprinter.h  block.h  code_emitter.h  global_isel.h  globalisel.h  instruction.h  instruction_selector.h  irtranslater.h  linear_scan_allocator.h  llvm_instruction.h  machine_ir.h  regalloc.h  register_alloc.h  register_allocator.h  riscv_instruction.h  riscv_mir.h  semantic.h  ssa.h  symtab.h  types.h
include/lib/: AST_NODE.hpp
include/yacc/: parser.hpp
lexer/: lex.l  lex.yy.c
lib/: AST_NODE.cpp
parser/: parser.output  parser.tab.c  parser.tab.h  parser.y
src/: astprinter.cpp  code_emitter.cpp  global_isel.cpp  globalisel.cpp  instruction_selector.cpp  irgenerate.cpp  irtranslater.cpp  linear_scan_allocator.cpp  machine_ir.cpp  regalloc.cpp  register_alloc.cpp  register_allocator.cpp  riscv_instruction.cpp  riscv_mir.cpp  semantic.cpp  ssa_destroyer.cpp  ssa_optimizer.cpp  ssa_optimizer_ALL.cpp  ssa_optimizer_enhanced.cpp  ssa_transform.cpp
test_results/ssa/: 00_main.s  01_var_defn2.s  100_test_ssa_optimization.s  11_add2.s  21_if_test2.s  25_while_if.s
tests/functional/: 00_main.ll  01_var_defn2.ll  02_var_defn3.ll  03_arr_defn2.ll  04_arr_defn3.ll  05_arr_defn4.ll  05_arr_defn4.sy  06_const_var_defn2.ll  07_const_var_defn3.ll  08_const_array_defn.ll  09_func_defn.ll  101_algebraic_simple.sy  101_phi_test.sy  104_enhanced_ssa_test.sy  104_enhanced_ssa_test_sysy.sy  105_simple_ssa_test.sy  105_test_ssa_optimization.sy  10_var_defn_func.ll  11_add2.ll  12_addc.ll  13_sub2.ll  14_subc.ll  15_mul.ll  16_mulc.ll  17_div.ll  (+89 more)
yacc/: CMakeLists.txt  lex.l  parser.y
(+47 files in other folders)
